Start Parameter erweitert
den MarkSweepGC in den Parameter geaddet
und auf 10 GB max ram erhöt